--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
  body 
 {color: brown;}
-
+.box {
+    width: 200px;
+    height: 100px;
+    border: 3px solid black;
+    padding: 10px;
+    margin: 10px;
+  }
