--- a/style.css
+++ b/style.css
@@ -4,6 +4,6 @@
     width: 200px;
     height: 100px;
     border: 3px solid black;
+    text-align: center;
     padding: 10px;
-    margin: 10px;
-  }
+    margin: 10px; }
