--- a/style.css
+++ b/style.css
@@ -5,5 +5,16 @@
     height: 100px;
     border: 3px solid black;
     text-align: center;
+    position: fixed;
     padding: 10px;
-    margin: 10px; }
+    margin: 10px;}
+    html, body
+    
+    html {
+        display: table;
+        margin: auto;
+    } 
+    body {
+        display: table-cell;
+        vertical-align: middle;
+    }
