--- a/style.css
+++ b/style.css
@@ -1,21 +1,5 @@
- body 
-{color: brown;}
-.box {
-    width: 200px;
-    height: 100px;
-    border: 3px solid black;
-    text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
-    position: fixed;
-    padding: 10px;
-    margin: 10px;}
-    html, body
-    
-    html {
-        display: table;
-        margin: auto;
-    } 
-    body {
-        display: table-cell;
-        vertical-align: middle;
-    }
+*{
+    margin: 0;
+    padding: 0;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+}
