--- a/style.css
+++ b/style.css
@@ -1,5 +1,14 @@
 *{
     margin: 0;
     padding: 0;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    box-sizing: border-box;
 }
+body{
+    width:100%;
+    height:100%;
+    background-image:url(woods.jpeg);
+    background-size:cover
+}
+
+
