--- a/style.css
+++ b/style.css
@@ -3,14 +3,17 @@
     padding: 0;
     font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif
     box-sizing: border-box;
-    color: rgb(254, 254, 254);
-    
 }
-body{
-    width:100%;
-    height:100%;
-    background-image:url(woods.jpeg);
-    background-size:cover
-}
+
+.container {
+    height: 100vh;
+    width: 100%;
+    background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75),rgba(0,0,0,0.75)), url(woods.jpeg);
+    background-position: center;
+    box-sizing: border-box;
+    background-size: cover;
+    padding-right: 5%;
+    padding-left: 3%;}
+
 
 
