--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
-*{
+body{
     margin: 0;
     padding: 0;
-    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color:azure;
     box-sizing: border-box;
+    
 }
 
 .container {
