--- a/style.css
+++ b/style.css
@@ -14,8 +14,8 @@ body{
     box-sizing: border-box;
     background-size: cover;
     padding-right: 10%;
-    padding-left: 3%;
-padding-top: 10%;}
+    padding-left: 5%;
+padding-top: 17%;}
 
 .navbar{ widt: 90%;
 margin: auto;
@@ -23,8 +23,9 @@ padding: 15px;
 justify-content: space-between;
 align-items: center;
 background-color: rgb(12, 12, 18);
+color: azure;
 font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    
+}    
       
 
 
