--- a/style.css
+++ b/style.css
@@ -27,5 +27,12 @@ color: azure;
 font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }    
       
-
+.button {
+    padding:0px;
+    padding-left: 50%;
+    background-color: #121212;
+    border: 6px solid #0e2a11ad;
+    color:#000;
+    text-decoration:none;
+  }
 
