--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body{
     padding-left: 12%;
 padding-top: 17%;}
 
-.navbar{ widt: 90%;
+.navbar{ width: 90%;
 margin: auto;
 padding: 15px;
 justify-content: space-between;
@@ -28,6 +28,8 @@ font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans
 }    
       
 .button {
+    display: inline;
+    border-radius: 0.12em;
     padding:0px;
     padding-left: 50%;
     background-color: #121212;
