--- a/style.css
+++ b/style.css
@@ -17,14 +17,21 @@ body{
     padding-left: 12%;
 padding-top: 17%;}
 
-.navbar{ width: 90%;
+.navbar{ width: 100%;
 margin: auto;
 padding: 15px;
 justify-content: space-between;
 align-items: center;
 background-color: rgb(12, 12, 18);
+text-decoration:none; 
 color: azure;
-font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+.navbara {
+text-decoration:none; 
+color: azure;
+font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }    
       
 .button {
