--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body{
     width: 100%;
     background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75),rgba(0,0,0,0.75)), url(library.jpeg);
     background-position: center;
-    font-family:"Century Gothic", CenturyGothic, AppleGothic, sans-serif;
+    font-family:  'Helvetica Neue', sans-serif;
     background-size: cover;
     padding-right: 10%;
     padding-left: 12%;
