--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ justify-content: space-between;
 align-items: center;
 background-color: rgb(12, 12, 18);
 text-decoration:none; 
-font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;}
+font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;}
 
 .navbar a {
     float: right;
@@ -82,7 +82,7 @@ font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans
     text-align: center;
     padding: 4px 9px;
     text-decoration: none;
-    font-size: 15px;
+    font-size: 19px;
   }
 
   .navbar a:hover {
