--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ body {
 	font-family: "Josefin Slab", serif;
 }
 
-h1 { color: #aa4040; font-family: 'Droid serif', serif; font-size: 50px; font-weight: 400; font-style: italic; line-height: 44px; margin: 0 0 12px; text-align: center; }
+h1 { color: #a32b2b; font-family: 'Droid serif', serif; font-size: 60px; font-weight: 400; font-style: italic; line-height: 44px; margin: 0 0 12px; text-align: center; }
 p { color: #fafcff; font-size: 20px; font-family: "Libre Baskerville", serif; line-height: 45px; text-align: center; padding-top: 20px; }
 
 .background {
