--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body{
+body{ 
     margin: 0;
     padding: 0;
     font-size: 21px;
@@ -17,6 +17,8 @@ overflow-y: auto;}
     padding-right: 10%;
     padding-left: 12%;
 padding-top: 10%;
+overflow-y: auto;
+overflow-x: hidden;
 }
 
 .scrollbar{overflow-x: hidden;
