--- a/style.css
+++ b/style.css
@@ -126,3 +126,20 @@ font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;}
  transform: scale(1.1);
     }
 
+    .text-box {
+        max-width: 500px;
+        width: 100%;
+        background-color: #a32b2b;
+        border: 2px solid #333;
+        border-radius: 10px;
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+        padding: 140px;
+        margin-top: 5%;
+        margin-left: 22%;
+        ;
+    }
+    
+    .text-box p {
+        margin: 0;
+    }
+
