--- a/style.css
+++ b/style.css
@@ -16,10 +16,11 @@ overflow-y: auto;}
     background-size: cover;
     padding-right: 10%;
     padding-left: 12%;
-padding-top: 10%;
-overflow-y: auto;
-overflow-x: hidden;
-scrollbar-color:black;
+    padding-top: 10%;
+   overflow-y: auto;  
+   overflow-x: hidden;
+  scrollbar-color:black;
+  text-align: center;
 }
 
 .scrollbar{overflow-x: hidden;
@@ -60,8 +61,21 @@ body {
 	font-family: "Josefin Slab", serif;
 }
 
-h1 { color: #a32b2b; font-family: 'Droid serif', serif; font-size: 60px; font-weight: 400; font-style: italic; line-height: 44px; margin: 0 0 12px; text-align: center; }
-p { color: #fafcff; font-size: 20px; font-family: "Libre Baskerville", serif; line-height: 45px; text-align: center; padding-top: 20px; }
+h1 { color: #a32b2b; 
+    font-family: 'Droid serif', serif; 
+    font-size: 60px;
+     font-weight: 400; 
+     font-style: italic;
+      line-height: 44px; 
+      margin: 0 0 12px; 
+      text-align: center; }
+
+p { color: #fafcff; 
+    font-size: 20px; 
+    font-family: "Libre Baskerville", serif;
+     line-height: 45px; 
+     text-align: center; 
+     padding-top: 20px; }
 
 .background {
 	position: fixed;
@@ -128,14 +142,14 @@ font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;}
 
     .text-box {
         max-width: 500px;
-        width: 100%;
+        width: 90%;
         background-color: #a32b2b;
         border: 2px solid #333;
         border-radius: 10px;
         box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-        padding: 140px;
-        margin-top: 5%;
-        margin-left: 22%;
+        padding: 50px;
+        max-height 20%;
+       display:inline-block;
         ;
     }
     
@@ -149,10 +163,9 @@ font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;}
     .text-box p {
         font-size: 25px;
         color:#FFFFFF;
-        padding-bottom:30px;
-        padding-left: 20px;
         font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    }
+
+}
     
     .btn{
       background: #FFFFFF;  
@@ -186,7 +199,7 @@ font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;}
         cursor: pointer;
     display:none}
 
-
+    
 
 
     
