--- a/style.css
+++ b/style.css
@@ -67,7 +67,8 @@ h1 { color: #a32b2b;
      font-weight: 400; 
      font-style: italic;
       line-height: 44px; 
-      margin: 0 0 12px; 
+      margin: 0 0 12px;
+      margin-bottom: 7%; 
       text-align: center; }
 
 p { color: #fafcff; 
@@ -116,14 +117,17 @@ font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;}
 
    
   a.button2{
-    display:inline-block;
+    display:block;
     padding:0.9em 10em;
     border:0.16em solid #FFFFFF;
     margin:0 0.3em 0.3em 0;
     padding-right: 10%;
     padding-left: 10%;
     margin-top: 1%;
-    margin-left: 35%;
+    margin-left: auto;
+    margin-right: auto;
+    width: 40%;
+    text-align: center;
     box-sizing: border-box;
     text-decoration:none;
     text-transform:uppercase;
@@ -148,9 +152,8 @@ font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;}
         border-radius: 10px;
         box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
         padding: 50px;
-        max-height: 20%;
+        max-height: 130%;
        display:inline-block;
-        ;
     }
     
     
