--- a/style.css
+++ b/style.css
@@ -152,14 +152,20 @@ font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;}
  transform: scale(1.1);
     }
 
+    @media only screen and (max-width: 600px) {
+        div.example {
+          font-size: 20px;
+        }
+      }
+
     .text-box {
-        max-width: 500px;
-        width: 90%;
+        max-width: 600px;
+        width: 80%;
         background-color: #3b2424;
         border: 2px solid #333;
         border-radius: 10px;
         box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-        padding: 50px;
+        padding: 80px;
         max-height: 140%;
        display:inline-block;
     }
