--- a/style.css
+++ b/style.css
@@ -202,7 +202,7 @@ font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;}
 
     .btn:hover{
         
-        color:#FFFFFF;
+        color:#040000;
     }
 
     #next-btn{
