--- a/style.css
+++ b/style.css
@@ -198,11 +198,15 @@ font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;}
       border-radius: 4px;
       cursor: pointer;
       transition: all 0.3s;
+     background-color: #2c3e50;  
+    transition: background-color 0.3s ease, transform 0.3s ease, color 0.3s ease;
     }
 
     .btn:hover{
         
         color:#040000;
+        transform: scale(1.1);
+        background-color: #cbcbcbd5;
     }
 
     #next-btn{
