--- a/style.css
+++ b/style.css
@@ -241,10 +241,15 @@ font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;}
       margin: 10px 0; 
     }
 
-    .clues-list{
-        font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-        list-style-type: none;
-
+    #clues-container {
+        display: none;
+        opacity: 0;
+        transition: opacity 0.5s ease-in-out;
+    }
+    
+    .clues-container.show {
+        display: block;
+        opacity: 1;
     }
     
 
