--- a/style.css
+++ b/style.css
@@ -242,7 +242,7 @@ font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;}
     }
 
     #clues-container {
-        display: none;
+        display: inline-block;
         opacity: 8;
         transition: opacity 0.5s ease-in-out;
     }
