--- a/style.css
+++ b/style.css
@@ -258,7 +258,7 @@ font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;}
     font-size: large;
     list-style: none;
     display:inline;
-   
+    padding-top: 50%;
 
     .clues-Button{
         display: inline;
@@ -266,10 +266,46 @@ font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;}
     
 
 }
+@import url("https://fonts.googleapis.com/css?family=Montserrat&display=swap");
 
+* {
+  padding: 0;
+  margin: 0;
+}
 
-    
-
-   
+body {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+@keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
   
-
+  .spooky-title {
+    animation: fadeIn 1s ease-in-out; 
+  }
+  
+  @keyframes fadeInUp {
+    0% {
+      opacity: 0;
+      transform: translateY(20px);
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+  
+  .question-container {
+    opacity: 0;
+    animation: fadeInUp 1s forwards; 
+  }
+  
