--- a/style.css
+++ b/style.css
@@ -263,6 +263,11 @@ font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;}
     .clues-Button{
         display: inline;
     }
+
+    .submitted-name{
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+color: #f2f2f2;
+}
     
 
 }
