--- a/style.css
+++ b/style.css
@@ -160,7 +160,7 @@ font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;}
       }
 
     .text-box {
-        max-width: 550px;
+        max-width: 70%;
         width: 80%;
         background-color: #3b2424;
         border: 2px solid #333;
@@ -304,8 +304,9 @@ h2{
    
 }
 
-#submit-name {
-    padding: 8px 16px;
+#submit-name.btn {
+    padding: 8px 20px;
     font-size: 14px;
+    width: 15% ;
 }
 
