--- a/style.css
+++ b/style.css
@@ -183,7 +183,7 @@ font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;}
         border: 2px solid #333;
         border-radius: 10px;
         box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-        padding: 150%, 150%, 150%, 150%;
+        padding: 80%, 150%, 150%, 80%;
         max-height: 160%;
        display:inline-block;
        
@@ -328,8 +328,15 @@ h2{
 
 #submit-name.btn {
     display: inline-block;
-    padding: 8px 20px;
+    padding: 1% 0.5% 1% 0.5%;
     font-size: 14px;
     width: 15% ;
+}
+
+.strikes {
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    color: #f2f2f2;
+    margin-top: 20%;
+
 }
 
