--- a/style.css
+++ b/style.css
@@ -147,11 +147,11 @@ font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;}
    
   a.button2{
     display:flex;
-    padding:0.9em 10em;
+    padding:5% 10% 5% 10%;
     border:0.16em solid #FFFFFF;
     margin:0 0.3em 0.3em 0;
-    padding-right: 10%;
-    padding-left: 10%;
+    padding-right:5%;
+    padding-left: 5%;
     margin-top: 1%;
     margin-left: auto;
     margin-right: auto;
