--- a/style.css
+++ b/style.css
@@ -180,7 +180,7 @@ font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;}
         border: 2px solid #333;
         border-radius: 10px;
         box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-        padding: 5% 10%; 
+        padding: 5% 10% 1%; 
         max-height: 100vh; 
         overflow-y: auto; 
         display: inline-block;
