--- a/style.css
+++ b/style.css
@@ -87,6 +87,13 @@ p { color: #fafcff;
      text-align: center; 
      padding-top: 20px; }
 
+     @media (max-width: 768px) {
+    p {
+        font-size: 16px; 
+        line-height: 30px; 
+}
+     }
+
 .background {
 	position: fixed;
 	top: 0;
@@ -171,6 +178,12 @@ font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;}
        display:inline-block;
     }
     
+    @media (max-width: 768px) {
+    .text-box {
+        width: 90%; 
+        padding: 30px; 
+    }
+}
     
 
     body {
@@ -183,6 +196,44 @@ font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;}
         color:#FFFFFF;
         font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 
+}
+
+
+#wLinkedIn a {
+  margin-top: 5%;
+  display: inline-block;
+  color: #000 !important;
+  background: #fdfdfd;
+  background: -webkit-linear-gradient(#fdfdfd, #eee);
+  background: -moz-linear-gradient(#fdfdfd, #eee);
+  background: -o-linear-gradient(#fdfdfd, #eee);
+  background: linear-gradient(#fdfdfd, #eee);
+  text-decoration: none;
+  font-size: 12px !important;
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+  line-height: inherit;
+  font-weight: bold;
+  border: 1px solid #bbb;
+  border-radius: 3px;
+}
+
+#wLinkedIn a:hover {
+  opacity: 0.8;
+}
+
+#icon-bg {
+  display: inline-block;
+  background: #007bb6;
+  background: -webkit-linear-gradient(#81bedb, #007bb6);
+  background: -moz-linear-gradient(#81bedb, #007bb6);
+  background: -o-linear-gradient(#81bedb, #007bb6);
+  background: linear-gradient(#81bedb, #007bb6);
+  color: #fff;
+  padding: 0px 5px 3px;
+  border-radius: 3px;
+  border: 1px solid #3f7eb7;
+  font-size: 16px;
+  margin: -1px;
 }
     
     .btn{
@@ -209,6 +260,13 @@ font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;}
         background-color: #cbcbcbd5;
         box-shadow: 0 0 10px rgba(161, 85, 31, 0.8);
     }
+
+    @media (max-width: 768px) {
+    .btn {
+        padding: 8px 16px; 
+    }
+}
+
 
     #next-btn{
         background:#222;
@@ -267,6 +325,13 @@ font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;}
     .submitted-name{
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 color: #f2f2f2;
+}
+
+@media (max-width: 768px) {
+    .clues-list {
+        font-size: smaller; 
+        padding-top: 10%; 
+    }
 }
     
 
