--- a/style.css
+++ b/style.css
@@ -339,6 +339,10 @@ font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;}
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 color: #f2f2f2;
 }
+.label-text{
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; 
+    color: #f2f2f2;
+}
 
 @media (max-width: 768px) {
     .clues-list {
